# midi-access-kit

./: .gitignore  Cargo.toml  README.md
midi-access-cli/: Cargo.toml
midi-access-cli/src/: engine.rs  exit_codes.rs  lib.rs  midi.rs  output.rs  yaml_io.rs
midi-access-core/: Cargo.toml
midi-access-core/src/: catalog.rs  codec.rs  device.rs  lib.rs  merge.rs  meta.rs  resolve.rs  schema.rs
midi-access-mcp/: Cargo.toml
midi-access-mcp/src/: handle.rs  lib.rs
