[workspace]
resolver = "2"
members = ["midi-access-core", "midi-access-cli", "midi-access-mcp"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ragb/midi-access-kit"
description = "Shared foundation for a family of MIDI-device access crates: a generic Device trait, catalog/schema/resolve plumbing, and a generic CLI engine."

[workspace.dependencies]
midi-access-core = { path = "midi-access-core" }
midi-access-cli = { path = "midi-access-cli" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
midir = "0.10"
schemars = "0.8"
tsify-next = { version = "0.5", features = ["js"] }
wasm-bindgen = "0.2"

[profile.release]
lto = "thin"
strip = true
