[package]
name = "midi-access-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic CLI engine for MIDI device access crates: implement Device, call run::<D>()."

[dependencies]
midi-access-core = { workspace = true, features = ["schema"] }
clap = { workspace = true }
midir = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Used by the in-crate fake `Device` to exercise schema emission.
schemars = { workspace = true }
